[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/cano.png" type="Texture" id=1]
[ext_resource path="res://scripts/pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 109.085, 1027.24 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -16.8604, -1221.34 )
b = Vector2( -32.4956, 1220.33 )

[node name="Pipe" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Top" type="Sprite" parent="."]
position = Vector2( 0, -1296 )
scale = Vector2( 3, 8 )
texture = ExtResource( 1 )
flip_v = true

[node name="Bottom" type="Sprite" parent="."]
position = Vector2( 0, 1296 )
scale = Vector2( 3, 8 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1304 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1304 )
shape = SubResource( 1 )

[node name="PointsArea" type="Area2D" parent="."]
position = Vector2( 132, 45 )

[node name="PointsWall" type="CollisionShape2D" parent="PointsArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PointsArea" to="." method="_on_PointsArea_body_exited"]
